# azuremapswebapp

./: .env  .env.example  .gitignore  APIKEY.md  README.md  azuremapswebapp.code-workspace  main.py  requirements.txt
.github/workflows/: master_aqtracker.yml
app/: .gitignore  main.py  pyproject.toml
app/config/: settings.py
app/templates/: home.html
app/templates/assets/css/: atlas.min.css
app/templates/assets/js/: azuremaps.min.js
fastapi/: main.py  pyproject.toml
flask/: main.py
templates/: azuremaps.js  home.html  style.css
templates/assets/css/: style.min.css
templates/assets/js/: atlas-service.min.js  atlas.min.js  azuremaps.js  azuremaps.min.js
