[tool.poetry]
name = "azuremapswebapp"
version = "1.0.0"
description = "An API that displays Azure Maps and Pollution data"
authors = ["ricardoprins <ricardoprins@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
uvicorn = "^0.12.1"
fastapi = "^0.61.1"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
